--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            height: 100vh; /* Ocupa toda la altura de la pantalla */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
         .image-overlay {
             position: absolute;
@@ -16,21 +31,31 @@
             left: 0;
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla visible */
-            z-index: 100;
-            pointer-events: none; /* Permite interacciones con elementos detrás, como el botón "Launch" */
+            z-index: 100; /* Superposición por encima del iframe */
+            background-color: transparent; /* Elimina cualquier oscurecimiento */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            pointer-events: none; /* Permite interacciones con elementos detrás */
         }
         .image-overlay img {
             width: 100%;
-            height: auto;
-            max-height: 100vh; /* Ajusta la altura máxima para que se ajuste a la pantalla */
-            object-fit: cover; /* Asegura que la imagen no se deforme */
-            object-position: top; /* Ajusta la posición de la imagen */
+            height: 100%;
+            object-fit: cover; /* Imagen a pantalla completa sin deformarse */
+            object-position: top; /* Asegura que la parte superior de la imagen sea visible */
         }
-        iframe {
-            display: block;
-            width: 100%;
-            height: 100vh;
-            border: none;
+        .loading-message {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 20px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 102;
+            display: none;
         }
         .image-overlay.hidden {
             opacity: 0;
@@ -40,29 +65,35 @@
     </style>
 </head>
 <body>
-    <!-- Imagen superpuesta -->
-    <div class="image-overlay" id="imageOverlay">
-        <img src="https://www.dropbox.com/scl/fi/dtmkj33n6kgscjd4uhw9b/Portada-Matena.png?rlkey=87o6d7yzkgw00dco0uehwj3er&st=zqw32k5g&dl=1" alt="Portada">
+    <div class="container">
+        <!-- Visor AR -->
+        <iframe 
+            src="https://mywebar.com/p/Project_10_fntso1carf" 
+            id="arViewer"
+            allow="camera; gyroscope; accelerometer; magnetometer; xr-spatial-tracking; microphone;">
+        </iframe>
+
+        <!-- Imagen superpuesta -->
+        <div class="image-overlay" id="imageOverlay">
+            <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
+        </div>
+
+        <!-- Mensaje de carga -->
+        <div class="loading-message" id="loadingMessage">Espere, cargando el servidor...</div>
     </div>
 
-    <!-- Visor AR -->
-    <iframe 
-        src="https://mywebar.com/p/Project_10_fntso1carf" 
-        id="arViewer"
-        allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
-    </iframe>
-
     <script>
-        // Detecta cuándo el visor está listo
-        const iframe = document.getElementById('arViewer');
         const imageOverlay = document.getElementById('imageOverlay');
+        const loadingMessage = document.getElementById('loadingMessage');
 
-        iframe.addEventListener('load', () => {
-            // Espera 8 segundos después de aceptar permisos
+        // Oculta la imagen después de 12 segundos
+        setTimeout(() => {
+            imageOverlay.classList.add('hidden');
+            loadingMessage.style.display = 'block';
             setTimeout(() => {
-                imageOverlay.classList.add('hidden');
-            }, 8000); // 8 segundos
-        });
+                loadingMessage.style.display = 'none';
+            }, 5000); // Oculta el mensaje después de 5 segundos
+        }, 12000); // 12 segundos
     </script>
 </body>
 </html>
